dash cloud added

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Assets\Scripts\CharMvmnt\PlayerMoveBrack.cs" />
     <Compile Include="Assets\Scripts\CharMvmnt\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\CharMvmnt\PlMovAl.cs" />
+    <Compile Include="Assets\Scripts\dash\dashCloud.cs" />
     <Reference Include="Unity.2D.PixelPerfect.Editor">
       <HintPath>D:/Unity_Projects/Working Title/Library/ScriptAssemblies/Unity.2D.PixelPerfect.Editor.dll</HintPath>
     </Reference>
